--- a/6.3.0.ImpresionPieza.md
+++ b/6.3.0.ImpresionPieza.md
@@ -28,7 +28,7 @@ En algunos casos, si la pieza es más compleja se pueden necesitar más capas su
 
 ## Conceptos
 
-Vamos a aprovechar para repasar algunos soportes
+Vamos a aprovechar para repasar algunos conceptos:
 
 
 **Soporte**: Material extra que se genera al laminar para que las capas superiores de voladizos o puentes tengan donde sustentarse.
@@ -37,17 +37,18 @@ Vamos a aprovechar para repasar algunos soportes
 * Material extra generado por el laminador para mejorar la adherencia de la pieza con la base. Puede ser de diferentes tipos:
     * **Falda**: se genera unos perímetros extra en la primera capa. Podemos configurar el número de perímetros.
     ![](./images/falda_amongUS.png)    
-    * Brim/Balsa: genera varias capas extras de perímetros para mejorar la adherencia. Podemos configurar cuántas capas y el tamaño
+    * **Brim/Balsa**: genera varias capas extras de perímetros para mejorar la adherencia. Podemos configurar cuántas capas y el tamaño de éstas.
     ![](./images/balsa_AmongUS.png)
 
 
-* Retracción: es el movimiento para sacar el filamento que se hace para evitar goteos o que se generen hilos mientras el extrusor se mueve de un sitio a otro. Tiene como parámetros la cantidad de mm de retracción de filamento y la velocidad a la que se hace el movimiento. Si no tenemos bien configurada la retracción se generarán hilos como los de la imagen:
+* **Retracción**: es el movimiento para sacar el filamento que se hace para evitar goteos o que se generen hilos con el movimiento del extrusor cuando se mueve de un sitio a otro. Para configurar la extrusión tenemos como parámetro la **distancia** en mm de retracción de filamento y la **velocidad** a la que se hace este movimiento. Si no tenemos bien configurada la retracción se generarán hilos como los de la imagen:
 ![Mala retracción](./images/MalaRetraccion.png)
 
+* **Expansión horizontal**: Algunos materiales plásticos tienen la tendencia a expandirse al enfriarse con lo que el tamaño de la pieza impresa es levemente superior al que ha calculado el software laminar. el parámetro se llama **Expansión XY** o **Expansión horizontal** suele ser del órden de 0.1mm y puede tener signo positivo, en cuyo caso hacemos la pieza más gruesa o negativo (el más habitual) en el que rebajamos el tamaño de la pieza.
 
 ## Capas superiores e inferiores
 
-En este vídeo vamos a ver problemas con las capas superiores e inferiores.
+En este vídeo vamos a ver problemas cuando no tenemos suficientes capas superiores e inferiores.
 
 [![Vídeo: Calidad de las capas superiores](https://img.youtube.com/vi/kb7x8JF50N0/0.jpg)](https://drive.google.com/file/d/162UCOAhJpprlGXIQ7bDplaLy4nFF1YWB/view?usp=sharing)
 
