--- a/6.3.3.Multicolor.md
+++ b/6.3.3.Multicolor.md
@@ -1,34 +1,33 @@
-## Multicolor
+## Impresión multicolor con 1 extrusor
+
+Sabemos que existen impresoras capaces de usar varios filamentos al mismo tiempo usando diferentes técnicas. En las impresoras con un único extrusor también podemos hacer piezas multicolor pero han de ser zonas limitadas a capas.
+
+El mecanismo básicamente es programar una pausa en la capa en la que queremos cambiar el filamento y hacer este cambio:
+
+* Configuramos la Pausa a la altura/capa que queramos
+* Comprobamos que la temperatura sea la adecuada
+* Sacamos el filamento
+* Configuramos  la temperatura del nuevo filamento 
+* Verificamos si la base se sigue calentando
+* Introducimos el nuevo filamento.
+* Purgamos el fusor, para que no queden restos del anterior, haciendo que se extruya suficiente cantidad para que se vea el nuevo color límpiamente. A veces se puede producir mezcla de colores, si uno es muy fuerte y otro claro, por poco que quede en el extrusor puede teñir al claro, por eso hay que extruir una buena cantidad tras hacer el cambio, hasta que veamos que sale limpio al 100%, y aún así puede pasar como a tí que quede algún resto en el interior.
+* Pulsamos la opción de contiuar para siga la impresión
+
+Para programar esa pausa en Prusa Slicer, sólo tenemos que pulsar en la vista de capas en el signo "+" en la columna adecuada de la columna de capas:
+
+![Programación de cambio de filamento en PrusaSlicer](./images/cambioFilamentoPrusa.png)
 
 
-Change filament
+En Ultimaker Cura utilizaremos la extensión de postprocesado de GCODE, donde encontramos diferentes extensiones que nos permiten hacerlo como "Change filament", "Pause at height" o "Search & replace" donde configuraremos la altura y las características de la pausa.
+
+![Extensión de postprocesado](./images/ExtensionPostprocesado.png)
 
 
-Pause at height
+¡¡CUIDADO con CURA !! Las opciones de postprocesado en Cura se quedan aunque cambiemos de pieza.
 
+![Scripts de postprocesado](./images/ScriptsPostprocesado.png)
 
-
-Search & replace
-
-Hola Antonio, creo que has conseguido un muy buen resultado. Efectivamente en algunos modelos/versiones no funciona bien lo del cambio de filamento y hay que probar distintas alternativas, ya que has publicado el resultado ¿te animas a publicar un par de capturas de pantallas explicando cómo has usado Search& Replace?
-
-Sobre la mezcla de colores, al ser el rojo tan fuerte por poco que quede en el extrusor tiñe el blanco, por eso hay que extruir una buena cantidad tras hacer el cambio, hasta que veamos que sale blanco 100%, y aún así puede pasar como a tí que quede algún resto en el interior.
-Muy buen trabajo
-
-Pausa
-Comprobamos que la temperatura sea la adecuada
-Sacamos el filamento
-Ponemos la temperatura del nuevo filamento 
-Verificamos si la base se sigue calentando
-Introducimos el filamento
-Purgamos el fusor, para que no queden restos del anterior, haciendo que se extruya suficiente cantidad para que se vea el nuevo color límpiamente.
-Pulsamos la opción de contiuar
-
-
-¡¡CUIDADO!! Las opciones de postprocesado en Cura se quedan aunque cambiemos de pieza
-
-
-En PrusaSlicer...
+En el siguiente vídeo vamos a ver cómo hacerlo con Prusa Slicer y con Ultimaker Cura. 
 
 
 [![Vídeo: 6.3.3 Laminando piezas con cambios de filamento para impresiones multicolor](https://img.youtube.com/vi/hpHaA-ts89w/0.jpg)](https://drive.google.com/file/d/1-aN93x5C3Frgwkc-X4B1nJvS4mTC_YK0/view?usp=sharing)
