--- a/6.5.ImpresionFilamentos_v2.md
+++ b/6.5.ImpresionFilamentos_v2.md
@@ -1,1 +1,16 @@
+# Filamentos flexibles
+
+Suelen tener muy buena adherencia
+
+Ejemplo de problema en el extrusor
+
+![](./images/ProblemaFlexible.jpg)
+
+Tenemos que quitar la retracción
+
+![](./images/3dBenchy_hilos.jpg)
+
+Hay que bajar la velocidad bastante
+
+![](./images/3dbenchy_flexible_velocidad.jpg)
 
