--- a/6.6.Proyectos3D.md
+++ b/6.6.Proyectos3D.md
@@ -1,12 +1,18 @@
-## Proyecto3DHowTo.md
+## Proyectos de impresión 3D
 
-Proyecto multipiezas
+A medida que vamos cogiendo confianza podemos aspirar a proyecto de varias piezas y cada vez más complejos. Para conseguir un buen resultado:
 
-* Sé organizado, prepara un listado para ir marcando lo que llevas y saber lo que te falta
-* Define un nivel de calidad y unos parámetros. Prepara todos los gcode con esa configuración
-* Una caja para las piezas
-* Anota los tiempos de cada pieza
+* Guarda la información del creador del proyecto, ten en cuenta sus consejos y revisa si hay comentarios de otros usuarios.
+* Sé organizado, prepara un listado para ir marcando las piezas que llevas impresas y saber lo que te falta.
+* Define un nivel de calidad y unos parámetros. Prepara todos los gcode con esa configuración, empezando por los más sencillos.
+* Guarda los ficheros GCode en una carpeta de la tarjeta de la impresora con nombres claros
+* A medida que vayas imprimiendo, usa nna caja para guardar las piezas impresas
+* Anota los tiempos y resultados de cada pieza para poder mejorarlas
 
+
+Puedes preparar impresiones con varias piezas a la vez: te será más sencillos, pero si falla una parte es posible que fallen otras. Si lo haces junta piezas de las mismas características y calidades
+
+Puedes guardar proyectos con cura y prusaslicer, con las piezas y sus posiciones y las  configuraciones.
 
 ### Ejemplo: [Motor de cuerda](https://www.instructables.com/id/PLA-Spring-Motor-Demonstrator-2/)
 
@@ -24,26 +30,4 @@ Proyecto multipiezas
 |Frame, Right.stl|1|0| 50% infill, Black Tough PLA.
 |Pawl.stl|1|0| 100% infill, Black Tough PLA.
 |Spring.stl|1|0| 100% infill, Black Tough PLA.
-
-Varias piezas por impresión: ventajas/incovenientes
-
-Juntando piezas de las mismas características 
-  
-
-Guardar proyectos con cura y prusaslicer
-
-repeticiones de impresiones 
-
-
-## Cohete de Tintin
-
-[Modelo](https://cults3d.com/fr/mod%C3%A8le-3d/jeu/fusee-tintin-tinin-rocket)
-
-/home/javacasm/modelos3D/tiih/fusee-tintin-tinin-rocket
-
-guardar enlace y recomendaciones 
-mirar comentarios
-
-## Rover marciano
-
 
