--- a/6.9.0.MejorasHardware.md
+++ b/6.9.0.MejorasHardware.md
@@ -1,5 +1,9 @@
 ## Mejoras en el hardware
 
+Otra forma de mejorar los resultados de nuestras impresiones es mejorando el funcionamiento de la impresora. 
+
+Una mejor mecánica (husillos, rodamientos, patines,...) o electrónica (motores, drivers, ...) puede generar mejores piezas
+
 ### Mejorando el aislamiento térmico
 
 Una capucha de silicona mejora el aislamiento del bloque calefactor, haciéndolo más eficiente al evitar fugas de calor
