--- a/6.9.1.Mejoras_kp3s.md
+++ b/6.9.1.Mejoras_kp3s.md
@@ -1,4 +1,4 @@
-## Mejoras KP3s
+## Mejoras para la KingRoon KP3s
 
 [![Vídeo: Mejoras a la impresora 3D Kingroon KP3s](https://img.youtube.com/vi/4o_p7YZYxN8/0.jpg)](https://youtu.be/4o_p7YZYxN8)
 
