--- a/6.9.4.Cajas.md
+++ b/6.9.4.Cajas.md
@@ -1,11 +1,15 @@
 ## Cajas/Cierres para impresoras
 
-### PrusaLack
+Otra forma de mejorar el resultado es encerrar nuestra impresora en una caja:
 
-[Proyecto PrusaLack](https://blog.prusaprinters.org/cheap-simple-3d-printer-enclosure_7785/)
+* La temperatura será mas estable
+* Menos ruído
+* Evitaremos que nadie toque.
+
+Un ejemplo es el [Proyecto PrusaLack](https://blog.prusaprinters.org/cheap-simple-3d-printer-enclosure_7785/) pensado para la imprerara de Prusa Original
 
 ![PrusaLack](./images/PrusaLack.jpg)
 
 El diseño de las [piezas está en thingiverse](https://www.thingiverse.com/thing:2982392) y hay adaptaciones para diferentes impresoras con diferentes tamaños
 
-También hay diferentes diseños de puertas, unos más simples que otros según la necesidad
+También hay diferentes diseños de puertas, unos más simples que otros según la necesidad.
