--- a/6.9.0.MejorasHardware.md
+++ b/6.9.0.MejorasHardware.md
@@ -11,20 +11,22 @@ Una capucha de silicona mejora el aislamiento del bloque calefactor, haciéndolo
 ![Capucha de siliciona](./images/silicon_hotend_.jpg)
 
 
-Acoples de silicona para la base caliente
+Unos acoples de silicona para la base caliente también eliman fugas de calor hacia la estructura haciendo más eficiente el calentamiento.
 
-![](./images/s-l300.jpg)
+![Acoples de silicona](./images/s-l300.jpg)
 
-![](./images/cork_hotbed.jpg)
+De la misma manera añadir una plancha de corcho bajo la base calienta también mejorará la eficiencia
+
+![Aislamiento de la base caliente](./images/cork_hotbed.jpg)
+
+Existen también elementos calefactores para la base con un lado recubierto con aislante de silicona
 
 ![](./images/silicon_hotbed.png)
 
-acoples de motores con muelles para reducción del ruido
+También se pueden usar acoples para los motores con muelles para reducción del ruido y de vibraciones.
 
 ### Reduciendo el ruido
 
-ventiladores más silenciosos
-
-driver más silenciosos y eficientes
+Otro problema es el ruido que podemos reducir usando ventiladores más silenciosos, y por tanto caros y drivers más silenciosos y eficientes.
 
 
