--- a/6.9.1.Mejoras_kp3s.md
+++ b/6.9.1.Mejoras_kp3s.md
@@ -1,28 +1,32 @@
 ## Mejoras para la KingRoon KP3s
 
+Vamos a ver algunas mejorar para la impresora Kingroon KP3s:
+
+
+
 [![Vídeo: Mejoras a la impresora 3D Kingroon KP3s](https://img.youtube.com/vi/4o_p7YZYxN8/0.jpg)](https://youtu.be/4o_p7YZYxN8)
 
 
-[Vídeo: Mejoras a la impresora 3D Kingroon KP3s](https://youtu.be/4o_p7YZYxN8)
+[Vídeo: Mejoras a la impresora 3D Kingroon KP3s](https://drive.google.com/file/d/1d5AG7C9Szh7qv4jQMEm5M2TaZuDrhjaH/view?usp=sharing)
 
 
-[Soporte fuente](https://www.thingiverse.com/thing:4740318)
+Un [soporte para la fuente de alimentación](https://www.thingiverse.com/thing:4740318) que nos va a ahorra espacio al permitirnos ponerla en posición vertical:
 
-![](https://cdn.thingiverse.com/assets/ba/b2/58/2c/7d/featured_preview_photo_2021-01-28_02-53-48.jpg)
+![Soporte para la fuente de alimentación](./images/SoporteFuente1.jpg)
 
-[Soporte fuente de alimentación vertical](https://www.thingiverse.com/thing:4671163)
+Hay varias versiones como este otro [soportes para fuente de alimentación vertical](https://www.thingiverse.com/thing:4671163)
 
-![](https://cdn.thingiverse.com/assets/ab/22/14/3d/0a/featured_preview_IMG_1407-min.jpg)
+![Soporte para la fuente de alimentación](./images/SoporteFuente2..jpg)
 
-[Portarollo sobre la fuente de alimentación](https://www.thingiverse.com/thing:4611818)
+También podemos hacer que ocupe menos espacio si usamos este [Portarollo sobre la fuente de alimentación](https://www.thingiverse.com/thing:4611818)
 
-![](https://cdn.thingiverse.com/assets/10/e7/e0/44/15/featured_preview_Screenshot_20201001-113713.jpg)
+![Portarollo sobre la fuente de alimentación](./images/Portarollos.jpg)
 
-[Portarollo sobre el eje Z](https://www.thingiverse.com/thing:4600120)
+O este otro [Portarollo sobre el eje Z](https://www.thingiverse.com/thing:4600120)
 
-![](https://cdn.thingiverse.com/assets/19/d0/1c/99/cc/featured_preview_Screenshot_20200919-171553__01.jpg)
+![](./images/Portarollo2.jpg)
 
-[Portarollos sobre el eje Z](https://www.thingiverse.com/thing:4783450)
+O este otro [Portarollos sobre el eje Z](https://www.thingiverse.com/thing:4783450) que además evita pandeo en el husillo 
 
-![](https://cdn.thingiverse.com/assets/9b/c8/0b/81/17/featured_preview_Kingroon_KP3S_soporte_rolo_en_Z.jpg)
+![](./images/Portarollo3.jpg)
 
