--- a/6.0.0.Mejoras.md
+++ b/6.0.0.Mejoras.md
@@ -6,7 +6,7 @@ Entendemos como un error de impresión aquella pieza que no cumple mínimamente 
 
 También vamos a precisar algunos conceptos para, teniéndolos claros, poder definir mejor el resultado que esperamos tener.
 
-Al final del módulo veremos también como mejorar nuestras impresoras añadiendo piezas o modificaciones sencillas para conseguir mejores impresiones.
+Al final del módulo veremos también cómo mejorar nuestras impresoras añadiendo piezas o modificaciones sencillas para conseguir mejores impresiones.
 
 [![Vídeo: 6.0 Mejorando la calidad de la Impresión](https://img.youtube.com/vi/WcuUEhJ70s8/0.jpg)](https://drive.google.com/file/d/1bNHQl_onX3AR1GUcQDhKFTnSZcQSjuzU/view?usp=sharing)
 
