--- a/6.0.1.TestCalidad.md
+++ b/6.0.1.TestCalidad.md
@@ -8,28 +8,26 @@ Hay algunos modelos que siempre tenemos que tener a mano para imprimirlos y así
 
 El primero de ellos es el [xyz Cube](https://www.thingiverse.com/thing:1278865),  un cubo de 20 x 20 x 20 mm  que tiene hechos unos grabados de las letras x y z en tres de sus caras y que nos va a permitir tanto calibrar el tamaño exacto de nuestra impresiones como la calidad de las mismas.  Se imprime rápidamente  y en muchas ocasiones ni siquiera es necesario esperar hasta que termine.
 
+![Cubo de calibración XYZ](./images/34dcf6594a055b63bccf0ce58f21f1d3_preview_card.jpg)
+
 Personalmente lo utilizo como prueba cuando vuelvo a imprimir después de un tiempo sin utilizar la impresora o cuando utilizo por primera vez un filamento.
 
-
-![xyz Cube](./images/34dcf6594a055b63bccf0ce58f21f1d3_preview_card.jpg)
-
+![3DBenchy](./images/3DBenchy.jpeg)
 
 Otro modelo clásico es nuestro querido [3dBenchy](https://www.thingiverse.com/thing:763622),  un simpático barquito diseñado por expertos y que incluye todas muchas características difíciles de imprimir,  cómo pueden ser los puentes, arcos, agujeros, voladizos, y así poder comparar la calidad de diferentes configuraciones. 
 
 Yo lo utilizo cuando quiero afinar la calidad de la impresión también como prueba inicial de toda impresora que se precie. 
 
-
-![3DBenchy](./images/3DBenchy.jpeg)
-
 ### Modelos articulados
 
 Una vez tenemos bastante fina nuestra impresora, podemos empezar a imprimir piezas articuladas. Estas piezas necesitan  una muy buena calibración en la temperatura y características del filamento, puesto que internamente las piezas tienen una estructura interior bastante compleja, con partes separadas pero muy cercanas que requieren una tolerancia muy ajustada.
+
+![Octopus impreso](./images/octupus.jpg)
 
 Un modelo articulado adecuado para empezar (necesita de un menor nivel de ajuste) es el conocido pulpo [Octopus](https://www.thingiverse.com/thing:3495390) con sus 8 tentáculos articulados. Tras imprimirlo y despegarlo de la base tenemos que retirar la primera capa que actúa como "pegamento" entre las partes de los tentáculos. 
 
 Una vez desbloqueados los iremos moviendo para limar y retirar las pequeñas imperfecciones
 
-![Octopus impreso](./images/octupus.jpg)
 
 Un modelo articulado más complejo es la [marioneta Ankly](https://www.thingiverse.com/thing:2431184) que se imprime como vemos tumbado y con relativa facilidad
 
@@ -45,7 +43,7 @@ Si la configuración no es adecuada, por ejemplo una temperatura excesiva, las p
 
 ### Modelos para ajustar la calidad
 
-También existen modelos pensados para afinar la configuración algún parámetro concreto, y que nos permiten por medio de la experimentación encontrar el valor óptimo.
+También existen modelos pensados para afinar la configuración de algún parámetro concreto, y que nos permiten por medio de la experimentación encontrar el valor óptimo.
 
 Una [Torre de calibración de temperatura](https://www.thingiverse.com/thing:2729076) es un modelo pensado para comprobar a qué temperatura obtenemos una mejor calidad. Necesitamos configurar la impresión de este modelo de una manera especial para hacer que diferentes partes se impriman a distinta temperatura. Veremos más adelante cómo hacerlo.
 
