--- a/6.0.2.Adherencia.md
+++ b/6.0.2.Adherencia.md
@@ -2,7 +2,7 @@
 
 Vamos a ver varios ejemplos de piezas impresas en las que ha fallado la adherencia y sus consecuencias:
 
-Vamos a ver un primer ejemplo donde una de las aletas del cohete de Tintin, se ha despegado de la base (por falta de calibración) curvándose bastante. 
+Vamos a ver un primer ejemplo donde una de las aletas del cohete de Tintín, se ha despegado de la base (por falta de calibración) curvándose bastante. 
 
 ![Comparación entre la pieza plana y la curvada](./images/PiezaMalaAdherencia.jpg)
 
