--- a/6.3.3.Multicolor.md
+++ b/6.3.3.Multicolor.md
@@ -23,9 +23,9 @@ En Ultimaker Cura utilizaremos la extensión de postprocesado de GCODE, donde en
 ![Extensión de postprocesado](./images/ExtensionPostprocesado.png)
 
 
-¡¡CUIDADO con CURA !! Las opciones de postprocesado en Cura se quedan aunque cambiemos de pieza.
+¡¡CUIDADO con CURA !! Las opciones de post-procesado en Cura se quedan aunque cambiemos de pieza.
 
-![Scripts de postprocesado](./images/ScriptsPostprocesado.png)
+![Señal de que hay scripts de post procesado activos](./images/ScriptsPostprocesado.png)
 
 En el siguiente vídeo vamos a ver cómo hacerlo con Prusa Slicer y con Ultimaker Cura. 
 
@@ -36,9 +36,9 @@ En el siguiente vídeo vamos a ver cómo hacerlo con Prusa Slicer y con Ultimake
 
 En el siguiente vídeo vamos a ver el resultado en una impresora Prusa i3
 
-[![Vídeo: 6.3.3 Impresion Bicolor usando una impresora Prus i3](https://img.youtube.com/vi/GMtm66EDobs/0.jpg)](https://drive.google.com/file/d/1V0dzk11nCsnFNNcTsqKjmfbra4ERZgcV/view?usp=sharing)
+[![Vídeo: 6.3.3 Impresión Bicolor usando una impresora Prus i3](https://img.youtube.com/vi/GMtm66EDobs/0.jpg)](https://drive.google.com/file/d/1V0dzk11nCsnFNNcTsqKjmfbra4ERZgcV/view?usp=sharing)
 
-[Vídeo: 6.3.3 Impresion Bicolor usando una impresora Prus i3](https://drive.google.com/file/d/1V0dzk11nCsnFNNcTsqKjmfbra4ERZgcV/view?usp=sharing)
+[Vídeo: 6.3.3 Impresión Bicolor usando una impresora Prus i3](https://drive.google.com/file/d/1V0dzk11nCsnFNNcTsqKjmfbra4ERZgcV/view?usp=sharing)
 
 Ahora vamos a hacerlo en una impresora KingRoon KP3s
 
