--- a/6.3.3.TorreCalibracion.md
+++ b/6.3.3.TorreCalibracion.md
@@ -1,10 +1,10 @@
 ## Torre de calibración
 
-Una [Torre de temperatura](https://www.thingiverse.com/thing:2729076) es un modelo que permite ajustar diferentes temperaturas a disintas alturas para ver cuál es la que produce un mejor resultado. Se pueden usar para otros parámetros, como la velocidad, retracción, ventilador...
+Una [Torre de temperatura](https://www.thingiverse.com/thing:2729076) es un modelo que permite ajustar diferentes temperaturas a distintas alturas para ver cuál es la que produce un mejor resultado. Se pueden usar para otros parámetros, como la velocidad, retracción, ventilador...
 
 ![Torre de calibración](./images/567a2bd8967679dce240352282964513_preview_card.jpg)
 
-Para configurarla adecuadamente tendremos que usar la extensiones de postprocesado de GCode que vimos para programar el cambio de filamento.
+Para configurarla adecuadamente tendremos que usar las extensiones de postprocesado de GCode que vimos para programar el cambio de filamento.
 
 
 [![Vídeo: 6.3.3  Imprimiendo una torre de calibración de temperaturas](https://img.youtube.com/vi/7-knmedhClQ/0.jpg)](https://drive.google.com/file/d/10u6iNK7vo35aNoyceqQ65XKQMENydvia/view?usp=sharing)
