--- a/6.6.Proyectos3D.md
+++ b/6.6.Proyectos3D.md
@@ -1,13 +1,13 @@
 ## Proyectos de impresión 3D
 
-A medida que vamos cogiendo confianza podemos aspirar a proyecto de varias piezas y cada vez más complejos. Para conseguir un buen resultado:
+A medida que vamos cogiendo confianza podemos aspirar a proyectos de varias piezas y cada vez más complejos. Para conseguir un buen resultado:
 
 * Guarda la información del creador del proyecto, ten en cuenta sus consejos y revisa si hay comentarios de otros usuarios.
 * Sé organizado, prepara un listado para ir marcando las piezas que llevas impresas y saber lo que te falta.
 * Define un nivel de calidad y unos parámetros. Prepara todos los gcode con esa configuración, empezando por los más sencillos.
-* Guarda los ficheros GCode en una carpeta de la tarjeta de la impresora con nombres claros
-* A medida que vayas imprimiendo, usa nna caja para guardar las piezas impresas
-* Anota los tiempos y resultados de cada pieza para poder mejorarlas
+* Guarda los ficheros GCode en una carpeta de la tarjeta de la impresora con nombres claros.
+* A medida que vayas imprimiendo, usa una caja para guardar las piezas impresas.
+* Anota los tiempos y resultados de cada pieza para poder mejorarlas.
 
 
 Puedes preparar impresiones con varias piezas a la vez: te será más sencillos, pero si falla una parte es posible que fallen otras. Si lo haces junta piezas de las mismas características y calidades
