--- a/6.9.0.MejorasHardware.md
+++ b/6.9.0.MejorasHardware.md
@@ -8,10 +8,10 @@ Una mejor mecánica (husillos, rodamientos, patines,...) o electrónica (motores
 
 Una capucha de silicona mejora el aislamiento del bloque calefactor, haciéndolo más eficiente al evitar fugas de calor
 
-![Capucha de siliciona](./images/silicon_hotend_.jpg)
+![Capucha de silicona](./images/silicon_hotend_.jpg)
 
 
-Unos acoples de silicona para la base caliente también eliman fugas de calor hacia la estructura haciendo más eficiente el calentamiento.
+Unos acoples de silicona para la base caliente también eliminan fugas de calor hacia la estructura haciendo más eficiente el calentamiento.
 
 ![Acoples de silicona](./images/s-l300.jpg)
 
