--- a/6.9.1.Mejoras_kp3s.md
+++ b/6.9.1.Mejoras_kp3s.md
@@ -1,6 +1,6 @@
 ## Mejoras para la KingRoon KP3s
 
-Vamos a ver algunas mejorar para la impresora Kingroon KP3s:
+Vamos a ver algunas mejoras para la impresora Kingroon KP3s:
 
 
 
