--- a/6.9.4.Cajas.md
+++ b/6.9.4.Cajas.md
@@ -2,11 +2,11 @@
 
 Otra forma de mejorar el resultado es encerrar nuestra impresora en una caja:
 
-* La temperatura será mas estable
+* La temperatura será más estable
 * Menos ruído
 * Evitaremos que nadie toque.
 
-Un ejemplo es el [Proyecto PrusaLack](https://blog.prusaprinters.org/cheap-simple-3d-printer-enclosure_7785/) pensado para la imprerara de Prusa Original
+Un ejemplo es el [Proyecto PrusaLack](https://blog.prusaprinters.org/cheap-simple-3d-printer-enclosure_7785/) pensado para la impresora de Prusa Original
 
 ![PrusaLack](./images/PrusaLack.jpg)
 
