--- a/6.1.0.PrusaSlicer_avanzado.md
+++ b/6.1.0.PrusaSlicer_avanzado.md
@@ -9,7 +9,7 @@ Existen varias herramientas que nos permiten trabajar con varios objetos o copia
 [Vídeo: 6.1.x Uso de Varios Objetos o copias en PrusaSlicer](https://drive.google.com/file/d/1ejO1mcKb3LxFnU9lykg86Fa3BdzRZLYS/view?usp=sharing)
 
 
-En el modo avanzado podemos asignar diferentes configuraciones para los distintos objetos en una misma impresión.  no están disponibles todas los parámetros de configuración pero si los más importantes.  De esta forma podemos conseguir de una tacada el comparar diferentes resultados en un mismo objeto para diferentes configuraciones.
+En el modo avanzado podemos asignar diferentes configuraciones para los distintos objetos en una misma impresión. No están disponibles todas los parámetros de configuración pero si los más importantes. De una tacada podemos comparar diferentes configuraciones.
 
 
 [![Vídeo: 6.1.x Uso de diferentes configuraciones para distintos objetos en PrusaSlicer](https://img.youtube.com/vi/9jhawLLsy0s/0.jpg)](https://drive.google.com/file/d/1dIgNY36wRkXQzCO0VKbbIu3vDxliuiZv/view?usp=sharing)
