--- a/6.2.Cura_avanzado.md
+++ b/6.2.Cura_avanzado.md
@@ -1,19 +1,17 @@
-## Uso de la configuración presonalizada de Ultimaker Cura
-
-
-Ultimaker cura nos permite manipular los distintos modelos que hemos cargado para imprimir haciendo copias, agrupando , ...  los distintos modelos
+## Uso de la configuración personalizada de Ultimaker Cura
 
 [![Vídeo: 6.2.0 Manipulación de modelos en Ultimaker Cura](https://img.youtube.com/vi/Y8YdmhNVcOY/0.jpg)](https://drive.google.com/file/d/1_98U7YbhLcToIUONu9TcN3wMTFina03z/view?usp=sharing)
 
 [Vídeo: 6.2.0 Manipulación de modelos en Ultimaker Cura](https://drive.google.com/file/d/1_98U7YbhLcToIUONu9TcN3wMTFina03z/view?usp=sharing)
 
-
-
-Podemos establecer diferentes configuraciones para varias piezas en una misma impresión.
+Ultimaker cura nos permite manipular los distintos modelos que hemos cargado para imprimir haciendo copias, agrupando , ...  los distintos modelos
 
 [![Vídeo: 6.2.x Configuración de impresión distinta para varias piezas en una misma impresión ](https://img.youtube.com/vi/9_tk1nKCB0I/0.jpg)](https://drive.google.com/file/d/1MXAai3ipPlVQPDKutCa_4MkmlEzJqD7W/view?usp=sharing)
 
 [Vídeo: 6.2.x Configuración de impresión distinta para varias piezas en una misma impresión](https://drive.google.com/file/d/1MXAai3ipPlVQPDKutCa_4MkmlEzJqD7W/view?usp=sharing)
+
+Podemos establecer diferentes configuraciones para varias piezas en una misma impresión.
+
 
 
 Ultimaker cura nos permite utilizar una configuración personalizada más allá de los ocho o diez parámetros recomendados. Con ello vamos a tener un control total sobre la configuración de la impresión.  El problema es que el número de parámetros es enorme y puede llegar a abrumarnos.  No es necesario conocerlos todos,  poco a poco iremos aprendiendo nuevos, controlando y entendiendo el sentido de todos ellos.
