--- a/6.3.2.AjustePiezas.md
+++ b/6.3.2.AjustePiezas.md
@@ -1,16 +1,16 @@
 ## Ajuste preciso de tamaños
 
-Para imprimi algunas piezas como este [modelo de sable de luz retráctil](https://www.prusaprinters.org/prints/3720-collapsing-lightsaber-print-in-place) es necesario tener muy bien configurada nuestra impresora, para que las partes internas no se peguen entre sí
+Para imprimir algunas piezas como este [modelo de sable de luz retráctil](https://www.prusaprinters.org/prints/3720-collapsing-lightsaber-print-in-place) es necesario tener muy bien configurada nuestra impresora, para que las partes internas no se peguen entre sí
 
 ![Modelo de sable luz](./images/LightSaber.png)
 
 Muchos de estos modelos suelen incluir una pequeña pieza para probar si la calidad configurada es la adecuada y en caso contrario para facilitarnos la calibración:
 
-![Pieza para comproción](./images/PiezaCalibracionAjuste.png)
+![Pieza para comprobación](./images/PiezaCalibracionAjuste.png)
 
-Lo más habitual es que las diferentes partes se peguen (cosa que no debía pasar). En esta caso el parámetro que tenemos que ajustar es la **Expansión XY** o **Expansión horizontal** dándole un valor negativo. Empezaremos por -0.1 e iremos subiendo si es necesario.
+Lo más habitual es que las diferentes partes se peguen (cosa que no debía pasar). En este caso el parámetro que tenemos que ajustar es la **Expansión XY** o **Expansión horizontal** dándole un valor negativo. Empezaremos por -0.1 e iremos subiendo si es necesario.
 
-Si usamos Ultimaker Cura también podemos ajustar los parámetros **Coast & Wipe** que hacen que el extrusor deje de expulsar filamento cuando va a terminar una capa, evitando una gotita que a veces se deposita y estos modelos pegaría las capas.
+Si usamos Ultimaker Cura también podemos ajustar los parámetros **Coast & Wipe** que hacen que el extrusor deje de expulsar filamento cuando va a terminar una capa, evitando una gotita que a veces se deposita y en estos modelos pegaría las capas.
 
 Otro defecto que puede arruinarnos piezas como estas es la **Pata de elefante**. Con este simpático nombre se conoce al defecto producido por el mayor tamaño horizontal de las primeras capas. También podemos añadir un valor negativo para evitarlo.
 
@@ -23,7 +23,7 @@ Otro defecto que puede arruinarnos piezas como estas es la **Pata de elefante**.
 
 Si nuestro modelo no lo incluye, siempre podemos utilizar este [Modelo para ajuste de la expansión horizontal](https://www.thingiverse.com/thing:1662342):
 
-![Modelo para ajuste de expasión](./images/calibracionXY.jpg)
+![Modelo para ajuste de expansión](./images/calibracionXY.jpg)
 
 
 [![Vídeo 6.3.2 Ajuste preciso del tamaño de las piezas impresas](https://img.youtube.com/vi/BwVWK3U58Sg/0.jpg)](https://drive.google.com/file/d/13N2INAVBdvr5COEcwiM88UvchtBp5-u5/view?usp=sharing)
