--- a/6.3.3.Multicolor.md
+++ b/6.3.3.Multicolor.md
@@ -10,8 +10,8 @@ El mecanismo básicamente es programar una pausa en la capa en la que queremos c
 * Configuramos  la temperatura del nuevo filamento 
 * Verificamos si la base se sigue calentando
 * Introducimos el nuevo filamento.
-* Purgamos el fusor, para que no queden restos del anterior, haciendo que se extruya suficiente cantidad para que se vea el nuevo color límpiamente. A veces se puede producir mezcla de colores, si uno es muy fuerte y otro claro, por poco que quede en el extrusor puede teñir al claro, por eso hay que extruir una buena cantidad tras hacer el cambio, hasta que veamos que sale limpio al 100%, y aún así puede pasar como a tí que quede algún resto en el interior.
-* Pulsamos la opción de contiuar para siga la impresión
+* Purgamos el fusor, para que no queden restos del anterior, haciendo que se extruya suficiente cantidad para que se vea el nuevo color limpiamente. A veces se puede producir mezcla de colores, si uno es muy fuerte y otro claro, por poco que quede en el extrusor puede teñir al claro, por eso hay que extruir una buena cantidad tras hacer el cambio, hasta que veamos que sale limpio al 100%, y aún así puede pasar como a tí que quede algún resto en el interior.
+* Pulsamos la opción de Continuar para siga la impresión
 
 Para programar esa pausa en Prusa Slicer, sólo tenemos que pulsar en la vista de capas en el signo "+" en la columna adecuada de la columna de capas:
 
