--- a/6.5.ImpresionFilamentos.md
+++ b/6.5.ImpresionFilamentos.md
@@ -2,7 +2,7 @@
 
 Suelen tener muy buena adherencia
 
-Ejemplo de problema en el extrusor
+Ejemplo de problema en el extrusor:
 
 ![](./images/ProblemaFlexible.jpg)
 
