--- a/PublicacionBase/6.Objetivos.md
+++ b/PublicacionBase/6.Objetivos.md
@@ -2,4 +2,6 @@
 
 ## Objetivos
 
+* Aprender a mejorar la calidad de las impresiones
 * Obtener piezas en distintos materiales para analizar tolerancias, retracciones y calibrado.
+* Mejorar conocimiento de los laminadores PrusaSlicer y Ultimaker Cura y con ello configurar mejor nuestras impresiones
